--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-    <p>Зимина Наталья</p>
+    <p id="inet">Зимина Наталья</p>
     <div>Контакты: 375298641730
         e-mail: tasha_next@rambler.ru
     </div>
