fix: change foto

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 </head>
 <body>
     <p id="inet">Зимина Наталья</p>
+    <img scr="images/129.JPG" alt="фото"> 
     <div>Контакты: 375298641730
         e-mail: tasha_next@rambler.ru
     </div>
