feat: added info

--- a/index.html
+++ b/index.html
@@ -1,12 +1,65 @@
 <!DOCTYPE html>
 <head>
     <link href="style.css" rel="stylesheet" type="text/css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,300&display=swap" rel="stylesheet">
 </head>
 <body>
-    <p id="inet">Зимина Наталья</p>
-    <img scr="images/129.JPG" alt="фото"> 
-    <div>Контакты: 375298641730
-        e-mail: tasha_next@rambler.ru
+    <div class="header">
+
     </div>
-    <span>Прохожу обучение в rolling scopes</span>
+    <div class="container">
+        <div class="container-row"> 
+            <div class="my-image">
+                <img src="images/129.jpg" alt="my photo">
+            </div>
+            <div class="my-info">
+                <p class="my-name">Zimina Natallia</p>
+                <p>Junior front-end developer</p>
+            </div>
+        </div>
+        <div class="container-row">
+            <div class="my-detail-info">
+                <h3 class="box">CONTACTS</h3>
+                <div>Tel: 375298641730</div>
+                <div>e-mail: tasha_next@rambler.ru</div>
+            </div>
+            <div class="my-detail-info">            
+                <h3>summary</h3>
+                <div>I like programming. I want to learn something new. By chance I saw that I was opening a set for courses, and I decided to take action.</div>
+            </div>
+        </div>
+        <div class="container-row">
+            <div class="my-detail-info">            
+                <h3>skills</h3>
+                <div>Web-development:HTML, CSS</div>
+                <div>Version control:Git, Github</div>
+            </div>
+            <div class="my-detail-info">            
+                <h3>code</h3>
+            </div>
+        </div>
+        <div class="container-row">
+            <div class="my-detail-info">            
+                <h3>courses</h3>
+            </div>
+            <div class="my-detail-info">            
+                <h3>projects</h3>
+            </div>
+        </div>
+        <div class="container-row">
+            <div class="my-detail-info">            
+                <h3>education</h3>
+                <p>BSEU and BNTY</p>
+            </div>
+            <div class="my-detail-info">            
+                <h3>english</h3>
+                <p>upper intermediate </p>
+                <p> speak fluently </p>
+            </div>
+        </div>
+    </div>
+    <div class="footer">
+    </div>
 </body>
